--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello coursera</title>
+	<title>module 2 solutions</title>
 </head>
 <body>
-<h1>hello coursera</h1>
+<h1>module 2 assignment solution</h1>
 </body>
 </html>
